[project]
name = "typer-test"
version = "0.1.0"
description = "Demonstrates a problem with typer"
authors = [{ name = "Bruce Eckel", email = "mindviewinc@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
